<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navegador_area"
        android:title="@string/areas">
        <menu>
            <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/ic_action_cuadrado"
            android:title="@string/cuadrado"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/ic_action_rectangulo"
            android:title="@string/rectangulo"/>
         <item
             android:id="@+id/menu_seccion_3"
             android:icon="@drawable/ic_action_triangulo"
             android:title="@string/triangulo"/>

    </group>
        </menu>
    </item>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/volumenes">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:icon="@drawable/ic_action_cubo"
                android:title="@string/cubo"/>
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@drawable/ic_action_esfera"
                android:title="@string/esfera"/>

        </menu>
    </item>
</menu>